<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceScreen android:title="@string/pref_dir" android:key="pref_dir" android:summary="@string/pref_dir_summary">
		<EditTextPreference android:title="@string/pref_dir_main" android:key="pref_dir_main" android:dialogTitle="@string/pref_dir_main" android:defaultValue="/sdcard/rmaps"></EditTextPreference>
		<EditTextPreference android:title="@string/pref_dir_maps" android:key="pref_dir_maps" android:dialogTitle="@string/pref_dir_maps" android:defaultValue="/sdcard/rmaps/maps"></EditTextPreference>
		<EditTextPreference android:title="@string/pref_dir_import" android:key="pref_dir_import" android:dialogTitle="@string/pref_dir_import" android:defaultValue="/sdcard/rmaps/import"></EditTextPreference>
		<EditTextPreference android:title="@string/pref_dir_export" android:key="pref_dir_export" android:dialogTitle="@string/pref_dir_export" android:defaultValue="/sdcard/rmaps/export"></EditTextPreference>
	</PreferenceScreen>
	<PreferenceCategory
		android:title="@string/prefcat_main_maps">
		<PreferenceScreen
			android:title="@string/pref_main_maps"
			android:summary="@string/pref_main_maps_summary">
			<PreferenceCategory
				android:title="@string/prefcat_main_predefinedmaps"
				android:key="pref_predefmaps_mapsgroup">
			</PreferenceCategory>
		</PreferenceScreen>
		<ListPreference
			android:entries="@array/languages_names"
			android:entryValues="@array/languages_codes"
			android:key="pref_googlelanguagecode"
			android:title="@string/pref_googlelanguagecode"
			android:summary="@string/pref_googlelanguagecode_summary"></ListPreference>
		<PreferenceScreen
			android:title="@string/pref_main_usermaps"
			android:summary="@string/pref_main_usermaps_summary" android:key="pref_main_usermaps">
			<PreferenceCategory
				android:key="pref_usermaps_mapsgroup"
				android:title="@string/pref_main_usermaps">
			</PreferenceCategory>
		</PreferenceScreen>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/prefcat_main_look">
		<CheckBoxPreference
			android:key="pref_keepscreenon"
			android:title="@string/pref_keepscreenon"
			android:summary="@string/pref_keepscreenon_summary"
			android:summaryOn="@string/pref_keepscreenon_summary"
			android:summaryOff="@string/pref_keepscreenon_summaryoff"
			android:defaultValue="true"></CheckBoxPreference>
		<CheckBoxPreference
			android:title="@string/pref_showstatusbar"
			android:summary="@string/pref_showstatusbar_summary"
			android:key="pref_showstatusbar"
			android:defaultValue="true"></CheckBoxPreference>
		<CheckBoxPreference
			android:title="@string/pref_showtitle"
			android:summary="@string/pref_showtitle_summary"
			android:key="pref_showtitle"
			android:defaultValue="true"></CheckBoxPreference>
		<ListPreference
			android:entryValues="@array/screen_orientation_pref_value"
			android:entries="@array/screen_orientation_pref_title"
			android:key="pref_screen_orientation"
			android:defaultValue="-1"
			android:title="@string/pref_screen_orientation"
			android:summary="@string/pref_screen_orientation_summary"></ListPreference>
		<ListPreference
			android:key="pref_accuracy"
			android:title="@string/pref_accuracy"
			android:summary="@string/pref_accuracy_summary"
			android:entryValues="@array/accuracy_pref_value"
			android:entries="@array/accuracy_pref_title"
			android:defaultValue="1"></ListPreference>
		<CheckBoxPreference
			android:key="pref_gpsfastupdate"
			android:defaultValue="true"
			android:summary="@string/pref_gpsfastupdate_summary"
			android:title="@string/pref_gpsfastupdate"></CheckBoxPreference>


		<ListPreference android:entryValues="@array/zoomctrl_pref_values" android:entries="@array/zoomctrl_pref_title" android:title="@string/pref_zoomctrl" android:key="pref_zoomctrl" android:summary="@string/pref_zoomctrl_summary" android:defaultValue="1"></ListPreference><ListPreference
			android:title="@string/pref_zoomminlevel"
			android:summary="@string/pref_zoomminlevel_summary"
			android:key="pref_zoomminlevel"
			android:entries="@array/zoomlevel_pref_title"
			android:entryValues="@array/zoomlevel_pref_value"
			android:defaultValue="10"></ListPreference>
		<ListPreference
			android:title="@string/pref_zoommaxlevel"
			android:summary="@string/pref_zoommaxlevel_summary"
			android:key="pref_zoommaxlevel"
			android:entries="@array/zoomlevel_pref_title"
			android:entryValues="@array/zoomlevel_pref_value"
			android:defaultValue="17"></ListPreference>
		<CheckBoxPreference
			android:key="pref_drivingdirectionup"
			android:title="@string/pref_drivingdirectionup"
			android:summary="@string/pref_drivingdirectionup_summary"
			android:defaultValue="true"></CheckBoxPreference>
		<CheckBoxPreference
			android:key="pref_northdirectionup"
			android:title="@string/pref_northdirectionup"
			android:summary="@string/pref_northdirectionup_summary"
			android:defaultValue="true"></CheckBoxPreference>


<CheckBoxPreference android:key="pref_showscalebar" android:title="@string/pref_showscalebar" android:defaultValue="true" android:summary="@string/pref_showscalebar_summary"></CheckBoxPreference>
<ListPreference android:summary="@string/pref_units_summary" android:key="pref_units" android:title="@string/pref_units" android:defaultValue="0" android:entryValues="@array/units_pref_values" android:entries="@array/units_pref_title"></ListPreference>
</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/prefcat_main_poi">
		<CheckBoxPreference
			android:title="@string/pref_hidepoi"
			android:key="pref_hidepoi"
			android:summary="@string/pref_hidepoi_summary"
			android:defaultValue="false"></CheckBoxPreference>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/prefcat_main_trackwriter"><ListPreference android:title="@string/pref_trackwriter_mintime" android:entries="@array/mintime_pref_title" android:entryValues="@array/mintime_pref_values" android:key="pref_trackwriter_mintime" android:summary="@string/pref_trackwriter_mintime_summary" android:defaultValue="2000"></ListPreference>
<ListPreference android:entries="@array/mindistance_pref_title" android:entryValues="@array/mindistance_pref_values" android:title="@string/pref_trackwriter_mindistance" android:key="pref_trackwriter_mindistance" android:summary="@string/pref_trackwriter_mindistance_summary" android:defaultValue="10"></ListPreference>
</PreferenceCategory><PreferenceCategory
		android:title="@string/prefcat_main_indexing">
		<CheckBoxPreference
			android:key="pref_turnoffautoreindex"
			android:title="@string/pref_turnoffautoreindex"
			android:summary="@string/pref_turnoffautoreindex_summary"
			android:defaultValue="false"></CheckBoxPreference>
		<com.robert.maps.utils.InternalCachePreference
			android:summary="@string/pref_internalcache_summary" android:title="@string/pref_internalcache_title" android:key="pref_internalcache"/>
		<com.robert.maps.utils.IndexPreference
			android:summary="@string/pref_index_summary" android:key="pref_index" android:title="@string/pref_index_title"/>
		<CheckBoxPreference android:key="pref_onlinecache" android:title="@string/pref_onlinecache" android:defaultValue="true" android:summary="@string/pref_onlinecache_summary"></CheckBoxPreference>

</PreferenceCategory>


</PreferenceScreen>
