<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <TextView android:text="TextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/Name" android:textAppearance="@style/title_red" android:layout_marginLeft="6dp" android:layout_marginTop="6dp"></TextView>
    <TableLayout android:layout_width="match_parent" android:id="@+id/tableLayout1" android:layout_height="wrap_content" android:layout_marginLeft="6dp" android:layout_marginRight="6dp" android:layout_marginTop="3dp">
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/tableRow1">
            <TextView android:id="@+id/textView1" android:text="@string/duration" android:textAppearance="@style/data_header" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginRight="10dp"></TextView>
            <TextView android:text="TextView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/duration_data"></TextView>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/tableRow2">
            <TextView android:layout_marginRight="6dp" android:id="@+id/textView3" android:text="@string/distance" android:textAppearance="@style/data_header" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
            <TextView android:text="TextView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/distance_data"></TextView>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/tableRow3">
            <TextView android:layout_marginRight="6dp" android:id="@+id/TextView01" android:textAppearance="@style/data_header" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/points_cnt"></TextView>
            <TextView android:text="TextView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/points_data"></TextView>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/tableRow4">
            <TextView android:layout_marginRight="6dp" android:id="@+id/TextView02" android:textAppearance="@style/data_header" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/avg_speed"></TextView>
            <TextView android:text="TextView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/avgspeed_data"></TextView>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/TableRow06">
            <TextView android:layout_marginRight="6dp" android:id="@+id/TextView15" android:textAppearance="@style/data_header" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/avg_pace"></TextView>
            <TextView android:text="TextView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/avgpace_data"></TextView>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/TableRow05">
            <TextView android:layout_marginRight="6dp" android:id="@+id/TextView13" android:textAppearance="@style/data_header" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/max_speed"></TextView>
            <TextView android:text="TextView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/maxspeed_data"></TextView>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/TableRow04">
            <TextView android:layout_marginRight="6dp" android:id="@+id/TextView11" android:textAppearance="@style/data_header" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/moving_time"></TextView>
            <TextView android:text="TextView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/movetime_data"></TextView>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/TableRow03">
            <TextView android:id="@+id/TextView09" android:textAppearance="@style/data_header" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/avg_moving_speed" android:layout_marginRight="10dp"></TextView>
            <TextView android:text="TextView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/moveavgspeed_data"></TextView>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/TableRow02">
            <TextView android:layout_marginRight="6dp" android:id="@+id/TextView07" android:textAppearance="@style/data_header" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/min_elevation"></TextView>
            <TextView android:text="TextView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/minele_data"></TextView>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/TableRow01">
            <TextView android:layout_marginRight="6dp" android:id="@+id/TextView05" android:textAppearance="@style/data_header" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/max_elevation"></TextView>
            <TextView android:text="TextView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/maxele_data"></TextView>
        </TableRow>
    </TableLayout>
    
</LinearLayout>
